# zip_container

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: prerelease.yml  publish-pypi.yml
examples/: usage_example.rs
examples/wasm_example_leptos/: Cargo.toml  Trunk.toml  index.html
examples/wasm_example_leptos/src/: app.rs  main.rs
nodejs-test/: package.json  test.js
src/: container_error.rs  lib.rs  python_bindings.rs  tests.rs  wasm_bindings.rs  zip_container_trait.rs
src/python_tests/: test_zip_container.py
src/tests/: mod.rs
