[package]
name = "zip_container"
version = "0.1.0"
edition = "2021"
authors = ["Holger Trahe <trahe@mac.com>"]
documentation = "https://docs.rs/zip_container/"
description = "Python Module of the ZipContainer  parser and writer for Rust"
repository = "https://github.com/holg/zip_container"
homepage = "https://github.com/holg/zip_container"
license = "GPL-3.0-or-later"
[lib]
# Defines the library for the Rust package
name = "zip_container"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[example]]
name = "usage_example"
required-features = ["native-runtime"]

#[[example]]
#name = "wasm_example_leptos"
#path = "examples/wasm_example_leptos/src/main.rs"
#required-features = ["tokio"]


[features]
default = ["native-runtime"]
native-runtime = ["tokio", "reqwest/native-tls"]
python = ["pyo3","pyo3-asyncio", "tokio"]

[dependencies]

#yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
#yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
##yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
#yaserde_derive = {version = "0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
#serde = { version = "1.0", features = ["derive"] }
#serde_json = {version = "1.0"}
# above are not needed, as zip_container is unopinionated about the content


zip = {version="2.2", features = ["deflate", "time"], default-features = false}
regex = { version = "1.11" }
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
openssl = { version = "0.10.68" }
futures = "0.3"
#tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"], optional = true }
# PyO3 and related dependencies for Python bindings (optional)
pyo3 = { version = "0.19.2", optional = true, features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["attributes", "tokio-runtime"], optional = true }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive", ] }
# Remove 'optional = true' for the build dependency, making it always available

[target.wasm32-unknown-unknown.dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"], optional = true }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.35"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3.72", features = ["console"] }
js-sys = "0.3.72"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-specific dependencies
tokio = { version = "1.40.0", default-features = false, features = ["sync", "macros", "io-util", "rt", "time", "fs"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
version_check = {version = "0.9.5"}
pyo3-build-config = { version = "0.19.2" }

[package.metadata.maturin]
# Optional: Configuration for maturin if you're building Python wheels
name = "zip_container"
version = "0.1.0"
